Fix table controls wrapping

--- a/src/shared/components/data-table/components/table-controls/components/pagination/Pagination.scss
+++ b/src/shared/components/data-table/components/table-controls/components/pagination/Pagination.scss
@@ -2,6 +2,10 @@
 
 .pagination {
   padding-left: 30px;
+  display: flex;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  align-items: center;
 }
 
 .inputWrapper {
